<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormActivity">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/txt_name"
            android:ems="10"
            android:id="@+id/editText_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.503"/>


    <EditText
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/txt_firstSurname"
            android:ems="10"
            android:id="@+id/editText_firstSurname"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" android:layout_marginTop="56dp"/>

    <EditText
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/txt_secondSurname"
            android:ems="10"
            android:id="@+id/editText_SecondSurname"
            app:layout_constraintStart_toEndOf="@+id/editText_firstSurname" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_name"/>

    <EditText
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/txt_phone"
            android:ems="10"
            android:id="@+id/editText_phone"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/editText_firstSurname"/>
    <TextView

            android:layout_width="115dp"
            android:layout_height="55dp"
            android:id="@+id/textView2" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_phone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            android:text="@string/txt_gender"
            android:textSize="29dp"
            />
    <RadioGroup
            android:layout_width="277dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/radioGroup"
            android:orientation="horizontal">
        <RadioButton
                android:text="@string/txt_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButtonFemale" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/txt_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButtonMale" android:layout_weight="1"/>
    </RadioGroup>
    <android.support.design.widget.FloatingActionButton
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@color/colorAccent"
            android:id="@+id/floatingActionButton2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:layout_marginTop="68dp"
            android:onClick="test"/>
    <Spinner
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:id="@+id/planets_spinner"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_SecondSurname"
            app:layout_constraintStart_toEndOf="@+id/editText_phone" android:layout_marginStart="52dp"/>
    <Button
            android:text="@string/txt_date"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDate" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            android:onClick="showDatePickerDialog"
            android:background="@drawable/button_selector"
            android:textColor="@color/letterColor"
            android:gravity="center"
    />

</android.support.constraint.ConstraintLayout>