<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
    <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imgLogo"
            android:layout_centerHorizontal="true"/>

    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@id/imgLogo"
            android:layout_above="@id/btnLog"
            android:orientation="vertical"
            android:padding="30dp">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/txt_email"
                android:id="@+id/editTextEmail"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
        app:helperText="@string/txt_help">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/txt_Password"
                android:id="@+id/editTextPass"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
            android:text="@string/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="46dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/btnLog"
            android:background="@color/colorAccent"
            android:textColor="@color/letterColor"

    />
</RelativeLayout>